--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -17,16 +17,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-
-      - run: pip install --upgrade pip setuptools wheel
       - run: pip install -r requirements.txt
-
-      - name: Ejecutar tests
-        run: python -m unittest discover -s tests -v
+      - run: python -m unittest discover -s tests -v
 
   build:
     name: Construir Package
@@ -34,19 +29,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-
-      - run: pip install --upgrade pip setuptools wheel build
       - run: pip install -r requirements.txt
-
-      - name: Ejecutar build
-        run: python -m build
-
-      - name: Subir artefacto
-        uses: actions/upload-artifact@v4
+      - run: python -m build
+      - uses: actions/upload-artifact@v4
         with:
           name: package
           path: dist/
@@ -56,7 +44,6 @@ jobs:
     needs: [test, build]
     runs-on: ubuntu-latest
     steps:
-      - name: Mostrar resultados
-        run: |
+      - run: |
           echo "Tests: ${{ needs.test.result }}"
           echo "Build: ${{ needs.build.result }}"
